# wezterm-gui

./: .gitlab-ci.yml  README.md  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  terminal.py  themes.py  utils.py
.github/workflows/: test.yml
assets/: styles.css
src/: config.py  feature_registry.py  terminal.py  themes.py  utils.py
test-results/: report.html
tests/: test_basic.py
