[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wezterm-gui"
version = "1.0.0"
description = "WezTerm terminal emulator configuration tool with interactive GUI"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "streamlit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-html",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
"src" = "src"
